[metadata]
name = sphinxcontrib-bitfield
version = 0.4.1
author = Arthur Gay
description = Sphinx "bitfield" extension
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arth-ur/sphinxcontrib-bitfield
keywords = sphinx, extension, documentation, bitfield, bytefield, diagram, renderer, svg
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Sphinx :: Extension
    Topic :: Documentation
    Topic :: Utilities

[options]
install_requires =
    bit-field>=0.4.0
    Sphinx>=0.6
packages = find:
namespace_packages =
    sphinxcontrib
